opam-version: "2.0"
version: "2.0.0"
license: "MIT"
synopsis: "A utility library to convert OCaml values to/from msgpack values"
maintainer: "mzp <mzp.ppp@gmail.com>"
author: "mzp <mzp.ppp@gmail.com>"
homepage: "http://github.com/msgpack/msgpack-ocaml/"
dev-repo: "git+https://github.com/msgpack/msgpack-ocaml"
bug-reports: "https://github.com/msgpack/msgpack-ocaml/issues"
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
depends: [
  "ocaml" {>= "4.08"}
  "dune" {>= "2.0"}
  "msgpack" {= version}
  "ppx_meta_conv" {>= "4.0.0"}
  "ounit" {with-test}
]
