opam-version: "2.0"
version: "2.0.0"
license: "MIT"
synopsis: "Msgpack library for OCaml"
description: "MessagePack is an efficient binary serialization format."
maintainer: "mzp <mzp.ppp@gmail.com>"
author: "mzp <mzp.ppp@gmail.com>"
homepage: "http://github.com/msgpack/msgpack-ocaml/"
dev-repo: "git+https://github.com/msgpack/msgpack-ocaml"
bug-reports: "https://github.com/msgpack/msgpack-ocaml/issues"
build: ["dune" "build" "-p" name "-j" jobs]
run-test: ["dune" "runtest" "-p" name "-j" jobs]
depends: [
  "ocaml" {>= "4.08"}
  "dune" {>= "2.0"}
  "num" {>= "1.0"}
  "ounit" {with-test}
]
